# ECS-Snake-Game

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: .gitignore  Doxyfile
spike/: CMakeLists.txt
spike/EnTT/: CMakeLists.txt  entt_basic.cpp
spike/SDL/: CMakeLists.txt  sdl_keyboard.cpp
spike/googletest/: CMakeLists.txt  googletest_factorial.cpp  gtest_factorial.cpp
spike/sigslot/: CMakeLists.txt  sigslot_basic.cpp
src/: CMakeLists.txt  main.cpp
src/component/: CMakeLists.txt  delta_time.hpp  key_control.hpp  position.hpp  snake_apple.hpp  snake_boundary_2d.hpp  snake_part.hpp  snake_part_head.hpp  velocity.hpp
src/system/: CMakeLists.txt  snake_gameplay_system.hpp  translate_2d.hpp
test/: CMakeLists.txt  enum_test.cpp  snake_gameplay_system_test.cpp  snake_gameplay_test.cpp  translate_2d_test.cpp
test/SDL/: CMakeLists.txt  sdl-hello-world.cpp  sdl-keyboard.cpp  sdl-timer.cpp
